<resources>
    <string name="menu_undone_all_tasks">Einsatz ausgefallen</string>
    <string name="menu_catalogs">Zusätzliche Leistungen</string>
    <string name="menu_notes">Besuchsvermerke</string>
    <string name="menu_info">Info</string>
    <string name="menu_actual_workers">MA, zus. Info</string>
    <string name="menu_gps">Gps</string>
    <string name="menu_extra_assessments">Zusätzliche Assessments</string>
    <string name="menu_manual_input">Manuelle Eingabe</string>
    <string name="menu_address">Adressen</string>
    <string name="menu_relatives">Angehörige</string>
    <string name="menu_doctors">Ärzte</string>
    <string name="menu_comments">Bemerkungen</string>
    <string name="menu_add_tasks">Leistungen hinzufügen</string>
    <string name="menu_additional_work">Zusätzlicher Einsatz</string>
    <string name="menu_db_backup">DB Backup</string>
    <string name="menu_db_restore">DB entpacken</string>
    <string name="menu_clear_darabase">Daten leeren</string>
    <string name="menu_close_program">Programm schließen</string>
    <string name="menu_program_info">Programm Info</string>
    <string name="menu_settings">Einstellungen</string>
    <string name="menu_add_additional_work">Zusätzliche Einsätze</string>
    <string name="menu_diagnose">Diagnosen</string>
    <string name="menu_illness_tours">Einsatz</string>
    <string name="menu_common_tours">Gemeinschaftstour</string>
    <string name="menu_add_patient">Hinzufügen</string>
    <string name="menu_remove_patient">Abgeben</string>
    <string name="menu_all_patients">Alle Patienten anzeigen</string>
    <string name="menu_undo">Rückgängig</string>
    <string name="menu_set_braden">dekubitusgefährdete Stellen</string>
    <string name="action_settings">Settings</string>
    <string name="menu_workers_tour_info">Übergabe Tour</string>
    <string name="menu_workers_patient_info">Wer versorgt wann?</string>
    <string name="menu_cars_info">PKW Tausch</string>
    <string name="program_options">Programmoptionen</string>
    <string name="options">Optionen</string>
    <string name="pin_code">PIN:</string>
    <string name="save_pin_code">PIN speichern</string>
    <string name="server_ip">Server:</string>
    <string name="input_server_ip">Server IP</string>
    <string name="server_port">Port:</string>
    <string name="phone_number">Telefon-Nr:</string>
    <string name="lock_options">Einstellungen sperren</string>
    <string name="enter_interval">Intervall eingeben</string>
    <string name="connect_with">Kontaktaufnahme mit mir ist nötig</string>
    <string name="medications_changed">Medikation hat sich geändert</string>
    <string name="aubrplanmabige_pflege">Außerplanmäßige Pflege-Visite sind erforderlich</string>
    <string name="visit_notes">Besuchsvermerke</string>
    <string name="start_task">Einsatzbeginn</string>
    <string name="end_task">Einsatzende</string>
    <string name="weight">Gewicht</string>
    <string name="detect_respiration">Atemzüge</string>
    <string name="balance">Menge in ml</string>
    <string name="blood_sugar">Blutzucker</string>
    <string name="temperature">Temperatur</string>
    <string name="blood_pressure">Blutdruck</string>
    <string name="pulse">Puls</string>
    <string name="synchronization">Datenabgleich</string>
    <string name="waitng_sockets_to_close">Warten auf den Socketsabschluss...</string>
    <string name="enter_pin">Geben Sie bitte Ihre PIN hier...</string>
    <string name="connection_try">Verbindung herstellen</string>
    <string name="connection_ok">Verbindung OK. Invitation empfangen...</string>
    <string name="invitation_ok">Invitation OK. Synchronization...</string>
    <string name="invitation_fail">Invitation fehlgeschlagen</string>
    <string name="sycnhronizing_ok">Synchronisation OK. Initialisierung...</string>
    <string name="sycnhronizing_fail">Synchronisation fehlgeschlagen</string>
    <string name="hello_request_ok">Initialisierung OK. Kalkulation der Prüfsummen...</string>
    <string name="hello_request_fail">Initialisierung fehlgeschlagen</string>
    <string name="checksum_ok">Prüfsummen OK. Datenbearbeitung...</string>
    <string name="checksum_fail">Prüfsummen fehlgeschlagen</string>
    <string name="processing_data_ok">Datenbearbeitung OK</string>
    <string name="processing_data_fail">Datenbearbeitung fehlgeschlagen</string>
    <string name="data_to_download">Daten herunterladen</string>
    <string name="connection_close_ok">Verbindungsschluß OK</string>
    <string name="connection_close_fail">Verbindungsschluß fehlgeschlagen</string>
    <string name="done">Fertig</string>
    <string name="app_name">TourPilot</string>
    <string name="program_version">Programm Version:</string>
    <string name="data_base_version">Datenbank Version:</string>
    <string name="version">Version</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="street">Strasse:</string>
    <string name="zip">PLZ:</string>
    <string name="city">Ort:</string>
    <string name="phone">Telefon-Nr.:</string>
    <string name="phone_private">Privat Tel.-Nr.:</string>
    <string name="phone_mobile">Handy Nr.:</string>
    <string name="def_empty_time">00:00</string>
    <string name="def_empty_date">xx.xx.xxxx</string>
    <string name="def_port">4448</string>
    <string name="blutzucker_value">mg/dl</string>
    <string name="atemzuge_value">A/min</string>
    <string name="gewicht_value">kg</string>
    <string name="puls_value">BpM</string>
    <string name="temperature_value">°C</string>
    <string name="ml">ml</string>
    <string name="min">diast.</string>
    <string name="max">syst.</string>
    <string name="back">Zurück</string>
    <string name="ok">OK</string>
    <string name="cancel">Abbruch</string>
    <string name="yes">Ja</string>
    <string name="no">Nein</string>
    <string name="dont_know">Sie wissen nicht</string>
    <string name="close">Schließen</string>
    <string name="search">Suchen</string>
    <string name="log_out">Abmelden</string>
    <string name="save">Speichern</string>
    <string name="start_time">Einsatzbeginn</string>
    <string name="stop_time">Einsatzende</string>
    <string name="tour_end">Tourende</string>
    <string name="stop">Stopp</string>
    <string name="start">Start</string>
    <string name="started_at">Gestartet um</string>
    <string name="attention">Achtung!</string>
    <string name="select_period">wählbarer Zeitraum</string>
    <string name="start_navigator">GPS Navigator starten</string>
    <string name="dialog_task_proof_undone">Möchten Sie diesen Einsatz als ausgefallen markieren?</string>
    <string name="dialog_task_proof_back">Möchten Sie wirklich die Zeiten verwerfen? Wenn Sie diese Meldung mit OK bestätigen, werden die Zeiten und jeweilige zusätzliche Leistungen gelöscht.</string>
    <string name="dialog_no_connection">Bitte, die Internet Verbindung zulassen</string>
    <string name="dialog_complete_all_tasks">Es fehlen noch Daten, die Sie für diese Tour noch nicht eingegeben haben. Bitte nehmen Sie die Eingabe jetzt vor.</string>
    <string name="dialog_no_ip_entered">Tragen Sie bitte die Server IP ein</string>
    <string name="dialog_connection_problems">Verbindungsstörungen</string>
    <string name="dialog_leaving_patient">Pflege OK?</string>
    <string name="dialog_proof_logout">Möchten Sie sich wirklich abmelden?</string>
    <string name="dialog_remove_pin">Soll der Pin weiterhin abgespeichert bleiben?</string>
    <string name="dialog_do_sync">Sie haben erfasste aber nicht gesendete Einsätze. Vor der Abmeldung muss eine Synchronisation durchgeführt werden.</string>
    <string name="dialog_comments">Bemerkungen</string>
    <string name="dialog_no_patients">Keine Patienten vorhanden</string>
    <string name="dialog_empty_tour">Die Tour ist leer</string>
    <string name="dialog_clear_database">Daten leeren?</string>
    <string name="dialog_employment_not_started">Einsatz ist noch nicht gestartet</string>
    <string name="dialog_start_employment">Bitte erst Einsatzbeginn antippen</string>
    <string name="dialog_reached_patient">Haben Sie den Patienten erreicht?</string>
    <string name="dialog_send">Klicken Sie auf Senden, um Daten zu verschicken. Wenn Sie Daten noch überprüfen möchten, klicken Sie auf Bearbeiten.</string>
    <string name="dialog_license_over">Kein Datenabgleich möglich. Alle Lizenzen werden bereits benutzt. Das Programm wird geschlossen.</string>
    <string name="dialog_interrupt">Datenabglieich zur Zeit ist nicht möglich. Versuchen Sie bitte später.</string>
    <string name="dialog_new_version">Neue Version</string>
    <string name="dialog_update_program">Neue Programmversion liegt vor. Soll sie installiert werden?</string>
    <string name="dialog_start_gps">Soll die Route zu dem gewählten Patienten verlegt werden?</string>
    <string name="dialog_clear_tasks">Wollen Sie die Zeiten für den Einsatzbeginn verwerfen. Wenn Sie diese Meldung mit ja bestätigen, werden die Zeiten gelöscht</string>
    <string name="dialog_close">Programm schließen</string>
    <string name="dialog_closing">Es empfiehlt sich nicht das Programm während der Synchronisation zu schließen. Wenn Sie Störungen beim Datenabgleich sind, klicken Sie auf ja. Wenn bei der Verbindung keine Störungen gibt, klicken Sie auf Abbruch und warten Sie bitte bis der Datenabgleich zu Ende ist.</string>
    <string name="dialog_braden_point_marking">Sie haben die dekubitusgefährdete Stellen nicht markiert.</string>
    <string name="dialog_kontraktur_point_marking">Sie haben die Lokalisation der Kontraktur nicht markiert.</string>
    <string name="dialog_related_questions">Bevor Sie die Assessments erfassen, beantworten Sie bitte die Fragen, die eine Beziehung mit anderen Fragen haben.</string>
    <string name="dialog_no_connection_sync">Internetverbindung fehlt. Kein Datenabgleich möglich.</string>
    <string name="err_not_db_file">Wählen Sie bitte die Datei mit der Erweiterung .db</string>
    <string name="err_no_filemanager">Auf dem Handy ist kein Datei Manager installiert.</string>
    <string name="err_no_phone">Keine Telefon-Nr.</string>
    <string name="err_no_address">Keine Adresse</string>
    <string name="err_no_patients">Keine Patienten</string>
    <string name="no_any_patient">Keine Patienten ausgewählt</string>
    <string name="title_activity_verification">VerificationActivity</string>
    <string name="minuten_einen">Minuten einen Einsatz durchgeführt.</string>
    <string name="work_was_done">einen Einsatz durchgeführt.</string>
    <string name="data_to_send">Folgende Daten werden übermittelt:</string>
    <string name="done_tasks">durchgeführt wurde</string>
    <string name="undone_tasks">NICHT DURCHGEFÜHRT WURDE</string>
    <string name="there_are_no_done_tasks">Es gibt keine erledigte(n) Aufgabe(n)</string>
    <string name="there_are_no_undone_tasks">Es gibt keine unerledigte(n) Aufgabe(n)</string>
    <string name="other">Sonstiges:</string>
    <string name="verification_ok">Senden</string>
    <string name="verification_cancel">Bearbeiten</string>
    <string name="all_ok">Pflege OK</string>
    <string name="check_verification">Ich bestätige, dass ich die entsprechenden Informationen auf dem vorliegenden Leistungsnachweis eingetragen habe inkl. der Startzeit sowie des Handzeichens</string>
    <string name="agree">Einverstanden</string>
    <string name="btyp_kk">Krankenkassenleistung</string>
    <string name="btyp_pk">Pflegekassenleistung</string>
    <string name="btyp_sa">Sozialamtsleistung</string>
    <string name="btyp_pr">Privateleistung</string>
    <string name="db_backup_created">DB Backup erstellt</string>
    <string name="db_backup_restored">DB entpackt</string>
    <string name="db_cleared">DB geleert</string>
    <string name="title_activity_base_time_sync">BaseTimeSyncActivity</string>
</resources>