<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/catalogs"
        android:orderInCategory="100"
        android:showAsAction="never" 
        android:menuCategory="system"
        android:title="@string/menu_catalogs"/>
    <item
         android:id="@+id/cancelAllTasks"
         android:title="@string/menu_undone_all_tasks"
         android:menuCategory="system"
         android:showAsAction="never"
         android:orderInCategory="101" />
    <item
        android:id="@+id/notes"
        android:orderInCategory="102"
        android:title="@string/menu_notes"
        android:showAsAction="never" />
    <item
        android:id="@+id/info"
        android:orderInCategory="103"
        android:menuCategory="system"
        android:title="@string/menu_info"
        android:showAsAction="never" />
    <item
        android:id="@+id/manualInput"
        android:title="@string/menu_manual_input"
        android:showAsAction="never"
        android:orderInCategory="104" />
    <item
        android:id="@+id/address"
        android:title="@string/menu_address"
        android:showAsAction="never"
        android:orderInCategory="105"
        android:menuCategory="container" />
    <item
        android:id="@+id/doctors"
        android:title="@string/menu_doctors"
        android:menuCategory="system"
        android:orderInCategory="106"
        android:showAsAction="never" />
    <item
        android:id="@+id/relatives"
        android:menuCategory="container"
        android:title="@string/menu_relatives"
        android:showAsAction="never"
        android:orderInCategory="107" />
    <item
        android:id="@+id/comments"
        android:showAsAction="never"
        android:orderInCategory="108"
        android:menuCategory="container"
        android:title="@string/menu_comments" />
    <item
        android:id="@+id/diagnose"
        android:showAsAction="never"
        android:orderInCategory="109"
        android:menuCategory="container"
        android:title="Diagnoses" />

</menu>
